--- a/sketches/glow-coast-lines.yaml
+++ b/sketches/glow-coast-lines.yaml
@@ -11,6 +11,10 @@ cameras:
     perspective:
         type: flat
 
+scene:
+    background:
+        color: black
+
 layers:
     earth:
         data: { source: mapzen}
