--- a/scene/styles/polygons.yaml
+++ b/scene/styles/polygons.yaml
@@ -17,10 +17,11 @@ styles:
                 STRIPES_PCT: 1.6
                 STRIPES_MIN: .9
                 STRIPES_MAX: -.2
+                STRIPES_ANGLE: 0.25
             blocks:
                 color: |
                     color.a = stripes(getTileCoords()*STRIPES_SCALE, 
                                       mix(STRIPES_MIN,
                                           STRIPES_MAX,
                                           clamp(smoothstep(STRIPES_IN/STRIPES_MAX_ZOOM, STRIPES_OUT/STRIPES_MAX_ZOOM, max(u_map_position.z/STRIPES_MAX_ZOOM,0.)*0.9), 0., 1.)), 
-                                      PI*0.25)*STRIPES_ALPHA;
+                                      PI*STRIPES_ANGLE)*STRIPES_ALPHA;
