--- a/scene/layers/earth.yaml
+++ b/scene/layers/earth.yaml
@@ -2,6 +2,19 @@ layers:
     earth:
         data: { source: mapzen}
         draw:
-            stripes:
+            earth-stripes:
                 order: global.order
                 color: [0.534, 0.736, 1.000]
+
+styles:
+    earth-stripes:
+        mix: [stripes]
+        shaders:
+            defines:
+                STRIPES_IN: 3.
+                STRIPES_OUT: 4.
+                STRIPES_MAX_ZOOM: 6.
+                STRIPES_PCT: 1.9
+                STRIPES_MIN: .9
+                STRIPES_MAX: -.2
+                STRIPES_SCALE: 2.5
