--- a/scene/main.yaml
+++ b/scene/main.yaml
@@ -1,5 +1,6 @@
 import:
     - https://tangrams.github.io/blocks/global.yaml
+    - https://tangrams.github.io/blocks/elevation/stripes-full.yaml
     - styles/lines.yaml
     - styles/polygons.yaml
     - layers/water.yaml
@@ -7,7 +8,7 @@ import:
     # - layers/roads.yaml
     # - layers/buildings.yaml
     - layers/landuse.yaml
-    - layers/boundaries.yaml
+    # - layers/boundaries.yaml
 
 sources:
     mapzen:
