--- a/scene/layers/water.yaml
+++ b/scene/layers/water.yaml
@@ -29,7 +29,7 @@ layers:
                     - { $zoom: { min: 14 }, area: { min: 2000 } }
                     - { $zoom: { min: 15 } }
             draw:
-                polygons:
+                stripes:
                     color: [0.219, 0.226, 0.529]
 
         other-water-areas:
@@ -46,3 +46,42 @@ layers:
                     width: [[4,0px],[20,20px]]
                     color: [0.017, 1.000, 0.649]
                     join: round
+
+        water_boundaries-not-ocean:
+            filter:
+                all:
+                    - boundary: yes
+                    - not: { kind: [ocean,playa] }
+                    - $zoom: { min: 8}
+                # WARNING: any area filters here must match the area filters in the lakes layer
+                any:
+                    # limit show smaller landuse areas to higher zooms
+                    - { $zoom: { min: 1 },  area: { min: 40000000000 } }
+                    - { $zoom: { min: 2 },  area: { min: 20000000000 } }
+                    # some weird natural earth scale set transition
+                    - { $zoom: { min: 3 },  area: { min: 80000000000 } }
+                    - { $zoom: { min: 4 },  area: { min: 5000000000 } }
+                    - { $zoom: { min: 5 },  area: { min: 700000000 } }
+                    - { $zoom: { min: 6 },  area: { min: 500000000 } }
+                    - { $zoom: { min: 7 },  area: { min: 160000000 } }
+                    - { $zoom: { min: 8 },  area: { min: 40000000 } }
+                    - { $zoom: { min: 9 },  area: { min: 10000000 } }
+                    - { $zoom: { min: 10 }, area: { min: 8000000 } }
+                    - { $zoom: { min: 11 }, area: { min: 2000000 } }
+                    - { $zoom: { min: 12 }, area: { min: 200000 } }
+                    - { $zoom: { min: 13 }, area: { min: 100000 } }
+                    - { $zoom: { min: 14 }, area: { min: 2000 } }
+                    - { $zoom: { min: 15 } }
+            draw:
+                coast-lines:
+                    order: global.order
+                    color: [0.017, 1.000, 0.649]
+                    width: [[8,0px],[20,10px]]
+                    join: round
+            riverbank:
+                # river boundaries like the thames in london, la seine in paris
+                filter: { kind: riverbank }
+                draw:
+                    coast-lines:
+                        color: [0.017, 1.000, 0.649]
+                        width: [[8,0px],[20,10px]]
