--- a/scene/layers/landuse.yaml
+++ b/scene/layers/landuse.yaml
@@ -39,6 +39,32 @@ layers:
                         landuse-elevation-stripes:
                             color: [0.214,0.690,0.611]
                             visible: true
+        tier2:
+            filter:
+                any:
+                    # limit show smaller landuse areas to higher zooms
+                    - { $zoom: { min: 4 },  area: { min: 1000000000 } }
+                    - { $zoom: { min: 5 },  area: { min: 1000000000 } }
+                    - { $zoom: { min: 6 },  area: { min: 150000000 } }
+                    - { $zoom: { min: 7 },  area: { min: 100000000 } }
+                    - { $zoom: { min: 8 },  area: { min: 10000000 } }
+                    - { $zoom: { min: 9 },  area: { min: 5000000 } }
+                    - { $zoom: { min: 10 }, area: { min: 1000000 } }
+                    - { $zoom: { min: 11 }, area: { min: 500000 } }
+                    - { $zoom: { min: 12 }, area: { min: 250000 } }
+                    - { $zoom: { min: 13 }, area: { min: 100000 } }
+                    - { $zoom: { min: 14 }, area: { min: 50000 } }
+                    - { $zoom: { min: 15 }, area: { min: 20000 } }
+                    - { $zoom: { min: 15 }, area: { min: 2000 } }
+                    - { $zoom: { min: 16 } }
+            conservation:
+                filter:
+                    kind: [conservation, protected_area, nature_reserve]
+                    $zoom: { min: 4 }
+                draw:
+                    landuse-stripes:
+                        color: [[8,[0.216,0.612,0.447]], [12,[0.342,0.248,0.714]]]
+                        visible: true
 
 styles:
     landuse-stripes:
@@ -50,7 +76,7 @@ styles:
                 STRIPES_OUT: 18.
                 STRIPES_ANGLE: 0.45
                 STRIPES_MAX: -.025
-                STRIPES_ALPHA: .25
+                STRIPES_ALPHA: .75
     landuse-elevation-stripes:
         base: polygons
         mix: [elevation-stripes]
