--- a/scene/main.yaml
+++ b/scene/main.yaml
@@ -7,7 +7,7 @@ import:
     - layers/water.yaml
     - layers/earth.yaml
     - layers/roads.yaml
-    # - layers/buildings.yaml
+    - layers/buildings.yaml
     - layers/landuse.yaml
     - layers/boundaries.yaml
 
